--- a/just-causes-1.0.0.css
+++ b/just-causes-1.0.0.css
@@ -70,3 +70,10 @@
   -webkit-box-sizing: border-box;
   box-sizing: border-box;
 }
+
+.charity-image{
+	width:60px !important;
+	float:left!important;
+	margin-right:0.75em !important;
+	margin-bottom: 0.5em !important
+}
