--- a/just-causes-1.0.0.css
+++ b/just-causes-1.0.0.css
@@ -71,9 +71,10 @@
   box-sizing: border-box;
 }
 
-.charity-image{
+.just-causes-widget .charity-image{
 	width:60px !important;
 	float:left!important;
 	margin-right:0.75em !important;
 	margin-bottom: 0.5em !important
 }
+
