add read more link

--- a/just-causes-1.0.0.css
+++ b/just-causes-1.0.0.css
@@ -78,3 +78,8 @@
 	margin-bottom: 0.5em !important
 }
 
+.just-causes-widget .readmore {
+	font-size: 0.6em !important;
+	text-align: right !important;
+}
+
