--- a/just-causes-1.0.0.css
+++ b/just-causes-1.0.0.css
@@ -14,6 +14,7 @@
 	font-size: 16px !important;
 	color: black !important;
 	max-width: 400px !important;
+	margin-bottom: 5px !important;
 }
 
 .just-causes-widget .just-causes-widget-inner{
